--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,122 +1,94 @@
-@media screen and (min-width: 767px) { 
-  a:link {color:#fff; transition: 2s;}
-a:visited{color:#fff;}
-a:hover { color:#30e4f1; }
-
+@media screen and (min-width:767px) { 
+  a:link {color:#fff; transition:2s;}
+  a:visited{color:#fff;}
+  a:hover { color:#30e4f1; }
   body{
-    font-family: "Avenir Next";
-    background-image: url("typewriter-3224765_1280.jpg");
+    font-family:"Avenir Next";
+    background-image: url("typewriter.jpg");
   }
   li{
     list-style: none;
-  }  
+  }
   header{
-    background-color:rgba(233, 198, 145, 0.623);
+    background-color:rgba(233,198,145,0.623);
     height:90px;
     margin:4px;
   }
   .header-logo{
-    float: left;
-    font-size:36px;
-    padding:20px 40px;
+    float:left;
+    font-size:40px;
+    padding:10px 60px 0px 0px;
   }
   .header-list li{
     float:left;
-    font-size: 33px;
+    font-size:33px;
     padding:20px 20px;
   }
   .twitter-timeline{
-    float: right;
-  }
-  main{
-    padding:33px 20px;
-  }
-  .copy-container{
-    padding-top: 30px;
-  }
-  h1{
-    font-size: 60px;
-    color:blanchedalmond;
-  }
-  h3{
-   border-bottom: 1px solid rgba(209, 216, 229, 0.274);
-    font-size: 40px;
-color:#fff;
-  }
-  p{
-    color:blanchedalmond;
-   font-size: 30px;
-   margin:20px 30px;
-  }
- 
-  .footer{
-    background-color: rgba(66, 57, 39, 0.74);
-    height:100px;
-    padding:52px;
-  }
-  .footer-logo{
-    float: left;
-    font-size:36px;
-  }
-  .footer-list{
-    float: left;
-    font-size: 17px;
-  }
-  .footer-list li{
-  padding-bottom: 20px;
-  }
-  .contact{
     float:right;
   }
-  address{
-    font-size:20px;
-  }
-}
-@media screen and (max-width:767px) { 
-  a:link {color:#fff; transition: 2s;}
-a:visited{color:#fff;}
-a:hover { color:#30e4f1; }
-  body{
-    font-family: "Avenir Next";
-    background-image: url("typewriter-3224765_1280.jpg");
-  }
-  li{
-    list-style: none;
-  }
-  .header{
-    background-color:rgba(233, 198, 145, 0.623);
-    height:110px;
-    margin:4px;
-  }
-  .header-logo{
-    float: left;
-    font-size:30px;
-    padding:15px 20px 17px 20px;
-  }
-  .header-list li{
-    float: right;
-    font-size:16px;
-    padding:3px;
-  }
-  p{
-    font-size: 17px;
-    color:#fff;
-    padding:20px 10px;
+  h1{
+  color: rgb(252, 252, 250);
+  padding-left: 10px;
+  font-size:50px;
+  margin-top: 60px;
   }
   h3{
-    font-size: 30px;
-    color:aliceblue;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.445);
+    color:#fff;
+    font-size:30px;
+    margin:40px;
   }
-  .footer{
-    background-color: rgba(66, 57, 39, 0.74);
-    height:140px;
-    padding:10px;
+  .copy-container{
+    padding-bottom: 80px;
   }
-  .footer-logo{
-    float: left;
-    font-size:20px;
-    margin-bottom:70px;
-    margin-right:30px;
+  .contents-item{
+    margin-bottom: 100px;
   }
-}
+  p{
+    color: #fff;
+    font-size:25px;
+    padding: 20px;
+  }
+  }
+  @media screen and (max-width:767px) { 
+    a:link {color:#fff; transition:2s;}
+    a:visited{color:#fff;}
+    a:hover { color:#30e4f1;}
+    body{
+      font-family: "Avenir Next";
+      background-image:url("typewriter.jpg")
+    }
+    header{
+      background-color:rgba(233,198,145,0.623);
+      height:110px;
+      margin:4px;
+    }
+    .header-logo{
+      float:left;
+      padding:15px 0px 17px 3px;
+    }
+    .header-list li{  
+    list-style: none;
+     font-size:20px;
+     padding-top:4px;
+    }
+    h1{
+      color:#fff;
+      padding-top:230px;
+      padding-left:20px;
+      font-size:40px;
+      }
+    h3{
+        color:#fff;
+        border-bottom:1px solid #fff;
+        font-size:40px;
+      }
+      p{
+        color:#fff;
+        font-size: 20px;
+        padding: 20px;
+      }
+     .contents-item img{
+        width: 440px;
+      }
+    }
