--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,22 +33,25 @@
   font-size:50px;
   margin-top: 60px;
   }
-  h3{
+  h2{
     color:#fff;
     font-size:30px;
     margin:40px;
   }
-  .copy-container{
-    padding-bottom: 80px;
-  }
   .contents-item{
-    margin-bottom: 100px;
-  }
-  p{
-    color: #fff;
-    font-size:25px;
-    padding: 20px;
-  }
+    margin-left:260px;
+    width:720px;
+    min-height:500px;
+    height:1800px;
+    background-color:#e4e9ff;
+    margin-top:10px;
+    }
+    p{
+      color: rgb(44, 43, 43);
+      font-size:25px;
+      padding: 20px;
+      float: left;
+    }
   }
   @media screen and (max-width:767px) { 
     a:link {color:#fff; transition:2s;}
@@ -78,7 +81,7 @@
       padding-left:20px;
       font-size:40px;
       }
-    h3{
+    h2{
         color:#fff;
         border-bottom:1px solid #fff;
         font-size:40px;
@@ -90,5 +93,4 @@
       }
      .contents-item img{
         width: 440px;
-      }
-    }
+     }}
